portfolio updates :white_heart:

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="author" content="Rahat Rahman">
     <meta name="description" content="Portfolio site of Rahat Rahman">
+    <meta name="robots" content="noindex, nofollow, noarchive, nocache, nosnippet, noimageindex">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-177713480-1"></script>
@@ -67,7 +68,7 @@
             <div class="wrapper">
                 <h2>About</h2>
                 <div class="aboutSection">
-                    <div class="profile" data-aos="fade-right" data-aos-once="true" data-aos-duration="1000"><img src="https://rahatrahman.com/photos/profile.jpeg" alt="Rahat Rahman's profile picture"></div>
+                    <div class="profile" data-aos="fade-right" data-aos-once="true" data-aos-duration="1000"><img src="https://rahatrahman.com/photos/profile.jpeg" alt="Rahat Rahman's profile picture" loading="lazy"></div>
                     <div>
                         <p>I'm a front-end web developer located in Toronto, ON. I am passionate about web as a platform since it is open, free and democratic and which provides the maximum reach of users. I love to create web applications that are user interactive, accessible and responsive while making my code clean and DRY.</p>
                         <p>I am well versed in Agile and Waterfall software development methodologies and have extensive experience working in Scrum teams. I am also proficient in testing web and mobile applications ensuring all business requirements have been met.</p>
@@ -159,7 +160,7 @@
             <div class="wrapper">
                 <h2>Projects</h2>
                 <div class="project projectOne">
-                    <div data-aos="fade-right" data-aos-once="true" data-aos-duration="1000"><img src="assets/images/TILES.jpg" alt="screenshot of TILES project showing all the tiles as matched"></div>
+                    <div data-aos="fade-right" data-aos-once="true" data-aos-duration="1000"><img src="assets/images/TILES.jpg" alt="screenshot of TILES project showing all the tiles as matched" loading="lazy"></div>
                     <div class="description">
                         <h3>tiles</h3>
                         <p>A tile based memory game where the player matches the tiles using colours. The game keeps track of the number of attempts required to match the tiles and offers a continuous mode play option @320px.</p>
@@ -170,7 +171,7 @@
                     </div>
                 </div>
                 <div class="project projectTwo">
-                    <div data-aos="fade-right" data-aos-once="true" data-aos-duration="1000"><img src="assets/images/NEWS.jpg" alt="screenshot of news project showing the latest canadian headlines"></div>
+                    <div data-aos="fade-right" data-aos-once="true" data-aos-duration="1000"><img src="assets/images/NEWS.jpg" alt="screenshot of news project showing the latest canadian headlines" loading="lazy"></div>
                     <div class="description">
                         <h3>news project</h3>
                         <p>A news aggregator website made using the NewsAPI. The website fetches the latest headlines along with news from three other categories for both Canada and US.</p>
@@ -180,7 +181,7 @@
                     </div>
                 </div>
                 <div class="project projectThree">
-                    <div data-aos="fade-right" data-aos-once="true" data-aos-duration="1000"><img src="assets/images/COVID19.jpg" alt="screenshot of covid 19 project showing the canadian case numbers on August 25 until 3:37 pm EDT"></div>
+                    <div data-aos="fade-right" data-aos-once="true" data-aos-duration="1000"><img src="assets/images/COVID19.jpg" alt="screenshot of covid 19 project showing the canadian case numbers on August 25 until 3:37 pm EDT" loading="lazy"></div>
                     <div class="description">
                         <h3>covid-19 tracker</h3>
                         <p>A COVID-19 tracking app that displays the latest coronavirus case numbers globally as well as for 186 countries or territories using the COVID 19 API.</p>
@@ -190,7 +191,7 @@
                     </div>
                 </div>
                 <div class="project projectFour">
-                    <div data-aos="fade-right" data-aos-once="true" data-aos-duration="1000"><img src="assets/images/project-2.jpg" alt="screenshot of under the sea project showing the header image, heading and menu items"></div>
+                    <div data-aos="fade-right" data-aos-once="true" data-aos-duration="1000"><img src="assets/images/project-2.jpg" alt="screenshot of under the sea project showing the header image, heading and menu items" loading="lazy"></div>
                     <div class="description">
                         <h3>under the sea</h3>
                         <p>A multi-page client PSD conversion project that is fully responsive across all devices and made pixel-perfect using a style guide and design specification.</p>
