portfolio updates :white_heart:

--- a/index.html
+++ b/index.html
@@ -68,11 +68,11 @@
             <div class="wrapper">
                 <h2>About</h2>
                 <div class="aboutSection">
-                    <div class="profile" data-aos="fade-right" data-aos-once="true" data-aos-duration="1000"><img src="https://rahatrahman.com/photos/profile.jpeg" alt="Rahat Rahman's profile picture"></div>
+                    <div class="profile" data-aos="fade-right" data-aos-once="true" data-aos-duration="1000"><img src="https://rahatrahman.com/photos/profile.jpg" alt="Rahat Rahman's profile picture"></div>
                     <div>
-                        <p>I'm a front-end web developer located in Toronto, ON. I am passionate about web as a platform since it is open, free and democratic and which provides the maximum reach of users. I love to create web applications that are user interactive, accessible and responsive while making my code clean and DRY.</p>
-                        <p>I am well versed in Agile and Waterfall software development methodologies and have extensive experience working in Scrum teams. I am also proficient in testing web and mobile applications ensuring all business requirements have been met.</p>
-                        <p>I'm very eager to make use of all my old and newly acquired skills and be part of an exciting team where I can reach my full potential to learn and grow as a developer. If you think I have what you are looking for, let's get in touch!</p>
+                        <p>I'm a front-end developer based in Toronto. I love to create web applications that are user accessible, interactive and responsive while making my code clean, reusable and DRY. I am passionate about web as a platform since it is open, free and democratic and which provides the maximum reach of users.</p>
+                        <p>My previous experience working in Agile and Scrum development teams along with my background in testing enables me to care deeply about writing and pushing quality code, while ensuring that all business requirements have been met.</p>
+                        <p>Instead of being afraid of failure, I would like to be more afraid of inaction. Hence, I am always willing to embrace new challenges and push myself into new frontiers in order to learn more and grow as a developer.</p>
                     </div>
                 </div>
             </div>
@@ -163,7 +163,7 @@
                     <div data-aos="fade-right" data-aos-once="true" data-aos-duration="1000"><img src="assets/images/TILES.jpg" alt="screenshot of TILES project showing all the tiles as matched"></div>
                     <div class="description">
                         <h3>tiles</h3>
-                        <p>A tile based memory game where the player matches the tiles using colours. The game keeps track of the number of attempts required to match the tiles and offers a continuous mode play option @320px.</p>
+                        <p>A tile based memory game where the player matches the tiles using colours. The game logic is implemented in JavaScript, styled with Sass and animated using Animista. The game also offers a continuous mode play option at 320px.</p>
                         <p>HTML5 | CSS3 | Sass | JavaScript | jQuery | Responsive</p>
                         <a href="https://github.com/rahatbd/rahatRahmanProjectThree" target="_blank" rel="noopener noreferrer">GitHub Repo</a>
                         <a href="https://rahatrahman.com/TILES/">Live Link</a>
@@ -174,8 +174,8 @@
                     <div data-aos="fade-right" data-aos-once="true" data-aos-duration="1000"><img src="assets/images/NEWS.jpg" alt="screenshot of news project showing the latest canadian headlines"></div>
                     <div class="description">
                         <h3>news project</h3>
-                        <p>A news aggregator website made using the NewsAPI. The website fetches the latest headlines along with news from three other categories for both Canada and US.</p>
-                        <p>HTML5 | CSS3 | Sass | JavaScript | jQuery | Responsive | Rest API | Pair Programming</p>
+                        <p>A news aggregator website and a pair programming project made using the NewsAPI. The website fetches the latest headlines from various categories using an Ajax call and made interactive using jQuery. The website is fully responsive and localized for both Canada/US.</p>
+                        <p>HTML5 | CSS3 | Sass | JavaScript | jQuery | Responsive | Rest API</p>
                         <a href="https://github.com/Project-News/kristenScheelRahatRahmanProjectFour" target="_blank" rel="noopener noreferrer">GitHub Repo</a>
                         <a href="https://rahatrahman.com/ProjectNews/">Live Link</a>
                     </div>
@@ -184,8 +184,8 @@
                     <div data-aos="fade-right" data-aos-once="true" data-aos-duration="1000"><img src="assets/images/COVID19.jpg" alt="screenshot of covid 19 project showing the canadian case numbers on August 25 until 3:37 pm EDT"></div>
                     <div class="description">
                         <h3>covid-19 tracker</h3>
-                        <p>A COVID-19 tracking app that displays the latest coronavirus case numbers globally as well as for 186 countries or territories using the COVID 19 API.</p>
-                        <p>HTML5 | CSS3 | JavaScript | React | Responsive | Rest API</p>
+                        <p>A React COVID-19 tracking app that uses an Axios call to fetch the latest coronavirus case numbers globally using the Coronavirus COVID19 API. The tracker also provides options to view the latest case numbers for 186 countries or territories.</p>
+                        <p>HTML5 | CSS3 | React | Responsive | Rest API</p>
                         <a href="https://github.com/rahatbd/covid19" target="_blank" rel="noopener noreferrer">GitHub Repo</a>
                         <a href="https://rahatrahman.com/covid19/">Live Link</a>
                     </div>
@@ -194,7 +194,7 @@
                     <div data-aos="fade-right" data-aos-once="true" data-aos-duration="1000"><img src="assets/images/project-2.jpg" alt="screenshot of under the sea project showing the header image, heading and menu items"></div>
                     <div class="description">
                         <h3>under the sea</h3>
-                        <p>A multi-page client PSD conversion project that is fully responsive across all devices and made pixel-perfect using a style guide and design specification.</p>
+                        <p>A multi-page client PSD conversion project built using HTML and Sass that is fully responsive across all devices and made pixel-perfect following a style guide and design specification.</p>
                         <p>HTML5 | CSS3 | Sass | Responsive</p>
                         <a href="https://github.com/rahatbd/-rahat-rahman-project-two" target="_blank" rel="noopener noreferrer">GitHub Repo</a>
                         <a href="https://rahatrahman.com/project-2/">Live Link</a>
